syntax = "proto3";

package post;

message Post {
  int32 id = 1;
  string title = 2;
  string content = 3;
  int32 userId = 4;
  string createdAt = 5;
}

message PostId {
  int32 id = 1;
}

message PostData {
  Post posts = 1;
}

message CreatePostInput {
  string title = 1;
  string content = 2;
  int32 userId = 3;
}

message Pagination {
  int32 page = 1;
  int32 offset = 2;
  int32 totalCount = 3;
}

message FindPostsPayload {
  repeated PostData edges = 1;
  Pagination pagination = 2;
}

message Empty {}


service PostsService {
  rpc getAllPost (Empty) returns (FindPostsPayload) {}
  rpc findById (PostId) returns (Post) {}
  rpc createPost (CreatePostInput) returns (Post) {}
  rpc deletePost (PostId) returns (Post) {}
}
